ANTLRParser/CPnextParser.js
// Generated from CPnextParser.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import CPnextParserVisitor from './CPnextParserVisitor.js';




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class CPnextParser extends antlr4.Parser {

    static grammarFileName = "CPnextParser.g4";
    static literalNames = [ null, null, null, null, "'open'", "'type'", 
                            "'forall'", "'Trait'", "'mu'", "'Int'", "'Double'", 
                            "'String'", "'Bool'", "'Top'", "'Bot'", "'let'", 
                            "'letrec'", "'in'", "'if'", "'then'", "'else'", 
                            "'trait'", "'implements'", "'inherits'", "'new'", 
                            "'toString'", "'fold'", "'unfold'", "'@'", "'true'", 
                            "'false'", "'undefined'", "'override'", "'|'", 
                            "'..'", "'_'", null, null, null, null, null, 
                            "'()'", "'->'", "'=>'", "'&'", "'+'", "'-'", 
                            "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                            "'++'", "'<'", "'>'", null, null, "'=='", "'!='", 
                            "','", "'^'", "'!!'", "'#'", "'='", null, null, 
                            null, null, "'}'", null, "')'", "';'", "':'", 
                            "'\\'", "'/\\'", "'.'", "'?'", "'$'" ];
    static symbolicNames = [ null, "Whitespaces", "LineComment", "BlockComment", 
                             "Open", "Type", "ForAll", "TraitCaps", "Mu", 
                             "Int", "Double", "StringType", "Bool", "Top", 
                             "Bot", "Let", "LetRec", "In", "If", "Then", 
                             "Else", "TraitSmall", "Implements", "Inherits", 
                             "New", "ToString", "Fold", "Unfold", "At", 
                             "True_", "False_", "Undefined_", "Override", 
                             "Stick", "DotDot", "Underscore", "Lowerid", 
                             "Upperid", "Number", "BacktickOpen", "String", 
                             "Unit", "Arrow", "TraitArrow", "Intersect", 
                             "Plus", "Minus", "Star", "Divide", "Modulo", 
                             "Not", "And", "Or", "Append", "Less", "Greater", 
                             "LessEqual", "GreaterEqual", "Equal", "NotEqual", 
                             "Merge", "Forward", "Index", "Length", "Assign", 
                             "Newline", "BracketOpen", "BracketClose", "BraceOpen", 
                             "BraceClose", "ParenOpen", "ParenClose", "Semicolon", 
                             "Colon", "Backslash", "SlashBackslash", "Dot", 
                             "Question", "Dollar", "BacktickClose", "BracketCloseInDoc", 
                             "LineBreak", "Tag", "BackslashParen", "Plaintext", 
                             "ParenOpenInTag", "BraceOpenInTag", "BracketOpenInTag", 
                             "PlaintextAfterTag", "BracketCloseAfterTag", 
                             "BacktickCloseAfterTag", "TagAfterTag", "LinebreakAfterTag", 
                             "BackslashParenAfterTag" ];
    static ruleNames = [ "program", "open", "definition", "typeDef", "termDef", 
                         "type", "btype", "atype", "recordType", "recordTypeElement", 
                         "expression", "opexpr", "lexpr", "lambda", "bigLambda", 
                         "let_", "letRec", "open_", "ifElse", "trait", "new_", 
                         "toString_", "fold", "unfold", "fexpr", "dotexpr", 
                         "aexpr", "array", "record", "recordField", "recordUpdate", 
                         "methodPattern", "defaultPattern", "typeParam", 
                         "termParam", "termId", "wildcard", "selfAnno", 
                         "sort", "typeNameDecl", "typeName", "termNameDecl", 
                         "termName", "labelDecl", "label", "document", "docElement", 
                         "command", "interpolation", "newline", "plaintext", 
                         "arg", "recordArgField" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = CPnextParser.ruleNames;
        this.literalNames = CPnextParser.literalNames;
        this.symbolicNames = CPnextParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 5:
    	    		return this.type_sempred(localctx, predIndex);
    	case 11:
    	    		return this.opexpr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    type_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 2);
    		case 1:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    opexpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 9);
    		case 3:
    			return this.precpred(this._ctx, 8);
    		case 4:
    			return this.precpred(this._ctx, 7);
    		case 5:
    			return this.precpred(this._ctx, 6);
    		case 6:
    			return this.precpred(this._ctx, 5);
    		case 7:
    			return this.precpred(this._ctx, 4);
    		case 8:
    			return this.precpred(this._ctx, 3);
    		case 9:
    			return this.precpred(this._ctx, 2);
    		case 10:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, CPnextParser.RULE_program);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 106;
	                this.open(); 
	            }
	            this.state = 111;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	        this.state = 115;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 112;
	                this.definition(); 
	            }
	            this.state = 117;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	        }

	        this.state = 118;
	        this.expression();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	open() {
	    let localctx = new OpenContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, CPnextParser.RULE_open);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.match(CPnextParser.Open);
	        this.state = 125;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,2,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 121;
	                _la = this._input.LA(1);
	                if(!(_la===CPnextParser.Lowerid || _la===CPnextParser.Upperid)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 122;
	                this.match(CPnextParser.Divide); 
	            }
	            this.state = 127;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,2,this._ctx);
	        }

	        this.state = 128;
	        _la = this._input.LA(1);
	        if(!(_la===CPnextParser.Lowerid || _la===CPnextParser.Upperid)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 129;
	        this.match(CPnextParser.Semicolon);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, CPnextParser.RULE_definition);
	    try {
	        this.state = 133;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case CPnextParser.Type:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 131;
	            this.typeDef();
	            break;
	        case CPnextParser.Lowerid:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 132;
	            this.termDef();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeDef() {
	    let localctx = new TypeDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, CPnextParser.RULE_typeDef);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(CPnextParser.Type);
	        this.state = 136;
	        this.typeNameDecl();
	        this.state = 143;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===CPnextParser.Less) {
	            this.state = 137;
	            this.match(CPnextParser.Less);
	            this.state = 138;
	            this.typeNameDecl();
	            this.state = 139;
	            this.match(CPnextParser.Greater);
	            this.state = 145;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 149;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===CPnextParser.Upperid) {
	            this.state = 146;
	            this.typeNameDecl();
	            this.state = 151;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 152;
	        this.match(CPnextParser.Assign);
	        this.state = 153;
	        this.type(0);
	        this.state = 154;
	        this.match(CPnextParser.Semicolon);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	termDef() {
	    let localctx = new TermDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, CPnextParser.RULE_termDef);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156;
	        this.termNameDecl();
	        this.state = 160;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 157;
	                this.typeParam(); 
	            }
	            this.state = 162;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	        this.state = 166;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===CPnextParser.Underscore || _la===CPnextParser.Lowerid || _la===CPnextParser.BraceOpen || _la===CPnextParser.ParenOpen) {
	            this.state = 163;
	            this.termParam();
	            this.state = 168;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 171;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===CPnextParser.Colon) {
	            this.state = 169;
	            this.match(CPnextParser.Colon);
	            this.state = 170;
	            this.type(0);
	        }

	        this.state = 173;
	        this.match(CPnextParser.Assign);
	        this.state = 174;
	        this.expression();
	        this.state = 175;
	        this.match(CPnextParser.Semicolon);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	type(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new TypeContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 10;
	    this.enterRecursionRule(localctx, 10, CPnextParser.RULE_type, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 178;
	        this.btype();
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 188;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 186;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new TypeContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, CPnextParser.RULE_type);
	                    this.state = 180;
	                    if (!( this.precpred(this._ctx, 2))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
	                    }
	                    this.state = 181;
	                    this.match(CPnextParser.Intersect);
	                    this.state = 182;
	                    this.type(3);
	                    break;

	                case 2:
	                    localctx = new TypeContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, CPnextParser.RULE_type);
	                    this.state = 183;
	                    if (!( this.precpred(this._ctx, 1))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                    }
	                    this.state = 184;
	                    this.match(CPnextParser.Arrow);
	                    this.state = 185;
	                    this.type(1);
	                    break;

	                } 
	            }
	            this.state = 190;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	btype() {
	    let localctx = new BtypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, CPnextParser.RULE_btype);
	    var _la = 0; // Token type
	    try {
	        this.state = 225;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case CPnextParser.Int:
	        case CPnextParser.Double:
	        case CPnextParser.StringType:
	        case CPnextParser.Bool:
	        case CPnextParser.Top:
	        case CPnextParser.Bot:
	        case CPnextParser.Upperid:
	        case CPnextParser.BracketOpen:
	        case CPnextParser.BraceOpen:
	        case CPnextParser.ParenOpen:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 191;
	            this.atype();
	            this.state = 199;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 197;
	                    this._errHandler.sync(this);
	                    switch(this._input.LA(1)) {
	                    case CPnextParser.Int:
	                    case CPnextParser.Double:
	                    case CPnextParser.StringType:
	                    case CPnextParser.Bool:
	                    case CPnextParser.Top:
	                    case CPnextParser.Bot:
	                    case CPnextParser.Upperid:
	                    case CPnextParser.BracketOpen:
	                    case CPnextParser.BraceOpen:
	                    case CPnextParser.ParenOpen:
	                        this.state = 192;
	                        this.atype();
	                        break;
	                    case CPnextParser.Less:
	                        this.state = 193;
	                        this.match(CPnextParser.Less);
	                        this.state = 194;
	                        this.sort();
	                        this.state = 195;
	                        this.match(CPnextParser.Greater);
	                        break;
	                    default:
	                        throw new antlr4.error.NoViableAltException(this);
	                    } 
	                }
	                this.state = 201;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	            }

	            break;
	        case CPnextParser.ForAll:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 202;
	            this.match(CPnextParser.ForAll);
	            this.state = 204; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 203;
	                this.typeParam();
	                this.state = 206; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===CPnextParser.Upperid || _la===CPnextParser.ParenOpen);
	            this.state = 208;
	            this.match(CPnextParser.Dot);
	            this.state = 209;
	            this.type(0);
	            break;
	        case CPnextParser.TraitCaps:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 211;
	            this.match(CPnextParser.TraitCaps);
	            this.state = 212;
	            this.match(CPnextParser.Less);
	            this.state = 213;
	            this.type(0);
	            this.state = 216;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===CPnextParser.TraitArrow) {
	                this.state = 214;
	                this.match(CPnextParser.TraitArrow);
	                this.state = 215;
	                this.type(0);
	            }

	            this.state = 218;
	            this.match(CPnextParser.Greater);
	            break;
	        case CPnextParser.Mu:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 220;
	            this.match(CPnextParser.Mu);
	            this.state = 221;
	            this.typeNameDecl();
	            this.state = 222;
	            this.match(CPnextParser.Dot);
	            this.state = 223;
	            this.type(0);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atype() {
	    let localctx = new AtypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, CPnextParser.RULE_atype);
	    try {
	        this.state = 243;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case CPnextParser.Int:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 227;
	            this.match(CPnextParser.Int);
	            break;
	        case CPnextParser.Double:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 228;
	            this.match(CPnextParser.Double);
	            break;
	        case CPnextParser.StringType:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 229;
	            this.match(CPnextParser.StringType);
	            break;
	        case CPnextParser.Bool:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 230;
	            this.match(CPnextParser.Bool);
	            break;
	        case CPnextParser.Top:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 231;
	            this.match(CPnextParser.Top);
	            break;
	        case CPnextParser.Bot:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 232;
	            this.match(CPnextParser.Bot);
	            break;
	        case CPnextParser.Upperid:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 233;
	            this.typeName();
	            break;
	        case CPnextParser.BraceOpen:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 234;
	            this.recordType();
	            break;
	        case CPnextParser.BracketOpen:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 235;
	            this.match(CPnextParser.BracketOpen);
	            this.state = 236;
	            this.type(0);
	            this.state = 237;
	            this.match(CPnextParser.BracketClose);
	            break;
	        case CPnextParser.ParenOpen:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 239;
	            this.match(CPnextParser.ParenOpen);
	            this.state = 240;
	            this.type(0);
	            this.state = 241;
	            this.match(CPnextParser.ParenClose);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	recordType() {
	    let localctx = new RecordTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, CPnextParser.RULE_recordType);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 245;
	        this.match(CPnextParser.BraceOpen);
	        this.state = 251;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 246;
	                this.recordTypeElement();
	                this.state = 247;
	                this.match(CPnextParser.Semicolon); 
	            }
	            this.state = 253;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
	        }

	        this.state = 255;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===CPnextParser.Lowerid || _la===CPnextParser.Upperid) {
	            this.state = 254;
	            this.recordTypeElement();
	        }

	        this.state = 257;
	        this.match(CPnextParser.BraceClose);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	recordTypeElement() {
	    let localctx = new RecordTypeElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, CPnextParser.RULE_recordTypeElement);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 259;
	        this.labelDecl();
	        this.state = 261;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===CPnextParser.Question) {
	            this.state = 260;
	            this.match(CPnextParser.Question);
	        }

	        this.state = 263;
	        this.match(CPnextParser.Colon);
	        this.state = 264;
	        this.type(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expression() {
	    let localctx = new ExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, CPnextParser.RULE_expression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 266;
	        this.opexpr(0);
	        this.state = 271;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
	        if(la_===1) {
	            this.state = 267;
	            this.match(CPnextParser.Colon);
	            this.state = 268;
	            this.type(0);

	        } else if(la_===2) {
	            this.state = 269;
	            this.match(CPnextParser.Backslash);
	            this.state = 270;
	            this.type(0);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}

